# sva-rtl-transpiler

./: .gitignore  README.md  pyproject.toml
examples/fifo/: README.md  common.sv  design.json  fifo.sv  fifo_assertions.sv  fifo_assertions_immediate.sv  fifo_checker.sv
examples/fifo/formal/: README.md  fifo.sby  fifo_formal_top.sv
examples/fifo/formal-checker/: README.md  fifo.sby  fifo_checker_top.sv  fifo_cover.sby
src/sva_transpiler/: __init__.py  constants.py  linearizer.py  lookback_engine.py  main.py  pipeline_engine.py  utils.py  verilog_builder.py
